--- a/style.css
+++ b/style.css
@@ -1,217 +1,96 @@
 *{
-
 margin:0;
 padding:0;
-
 }
 
-
-
-.f{
-
-background-color:rgb(181, 2, 2); 
-
+nav{
+background-color:black;
 color:white;
-
-height:40px; 
-
 padding:15px;
-
-
 }
-
-
 
 li{
-
 display:inline;
-padding-left:15px;
-
 }
+
+ul,h1{
+text-align:center;
+}
+
+li:hover{
+color:grey;
+cursor:pointer;
+}
+
+
+
+
+
+input{
+width:40%;
+padding:10px;
+}
+
+.searchbar{
+text-align:center;
+margin:50px;
+}
+
+
+
+
+
+
+
+
 
 
 
 .box{
-
-position:relative;
-
-color:white;
-
+border-color:black;
+border-width:1px;
+border-style:solid;
+display:inline-block;
+width:220px;
+margin:40px;
 }
 
+.box:hover{
+background-color:red;
+color:white;
+cursor:pointer;
+}
+
+.menu{
+text-align:center;
+margin:10px;
+}
+
+
+
+.nav{
+background-color:black;
+color:white;
+text-align:center;
+}
+
+
+.Contact{
+padding:20px;
+}
+
+
+input{
+width:80%;
+margin-top:5px;
+}
 
 
 .one{
-
-position:absolute;
-
-top:35px;
-
-right:40px;
-
-margin-right:35px;
-
-font-size:14px;
-
-font-family: 'Josefin Sans', sans-serif;
-
-cursor:pointer;
-
-}
-
-
-
-
-
-.container{
-
-display:flex;
-
-flex-wrap:wrap;
-
-flex-direction:row;
-
-flex-basis:25%;
-
-justify-content:center;
-
-margin:10px;
-
-}
-
-
-
-.c{
-
-text-align:center;
-
-margin:50px;
-
-padding-top:30px;
-
-cursor:pointer;
-
-color:rgb(67, 204, 204);
-
-font-size:20px;
-
-}
-
-
-
-.c:hover{
-
-color:rgb(181, 2, 2);
-
-}
-
-
-
-.d{
-
-color:rgb(101, 102, 102);
-
-}
-
-
-
-
-
-.g{
-
-display:flex;
-
-flex-direction:row;
-
-justify-content:center;
-
-background-color:rgb(245, 142, 142);
-
-}
-
-
-
-.x{
-
-padding:30px;
-
-}
-
-
-
-.y{
-
-padding-top:35px;
-
-font-size:50px;
-
-color:rgb(71, 70, 70);
-
-background-color:rgb(245, 142, 142);
+background-color:yellow;
 color:black;
-
+width:40%;
+margin:5px;
 }
 
-
-
-.contact{
-
-text-align:center;
-
-padding-top:30px;
-
-}
-
-
-
-.z{
-
-display:flex;
-
-flex-direction:row;
-
-justify-content:flex-start;
-
-}
-
-
-.s{
-
-display:flex;
-
-flex-direction:row;
-
-justify-content:space-around;
-
-}
-
-
-.three{
-
-padding-left:30px;
-
-margin-left:30px;
-
-}
-
-
-
-.four{
-
-padding:50px;
-
-cursor:pointer;
-
-color:black;
-
-font-size:30px;
-
-}
-
-
-.four:hover{
-
-background-color:rgb(222, 227, 227);
-
-}
 
